--- a/app/index.html
+++ b/app/index.html
@@ -1,28 +1,37 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Pixi Multi Spine</title>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<meta name="full-screen" content="yes"/>
-		<meta id="viewport" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-		<meta name="apple-mobile-web-app-capable" content="yes">
-		<!-- injector:css -->
-		<link rel="stylesheet" href="./styles/main.css">
-		<!-- endinjector -->
-		<!-- bower:js -->
-		<script src="bower_components/modernizr/modernizr.js"></script>
-		<script src="bower_components/howler/howler.js"></script>
-		<script src="bower_components/pixi/bin/pixi.js"></script>
-		<!-- endbower -->
-		<!-- injector:js -->
-		<script src="./scripts/intro.js"></script>
-		<script src="./scripts/controller/game-loop-controller.js"></script>
-		<script src="./scripts/controller/scene-controller.js"></script>
-		<script src="./scripts/scene/main-menu-scene.js"></script>
-		<script src="./scripts/scene/game-scene.js"></script>
-		<script src="./scripts/outro.js"></script>
-		<!-- endinjector -->
-	</head>
-	<body>
-	</body>
+
+<head>
+	<title>Pixi Multi Spine</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="full-screen" content="yes" />
+	<meta id="viewport" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<!-- injector:css -->
+	<link rel="stylesheet" href="./styles/main.css">
+	<!-- endinjector -->
+
+
+	<!-- manually injected js -->
+	<script src="bower_components/p2js/build/p2.js"></script>
+	<!-- end manual inject -->
+
+	<!-- bower:js -->
+	<script src="bower_components/modernizr/modernizr.js"></script>
+	<script src="bower_components/howler/howler.js"></script>
+	<script src="bower_components/pixi/bin/pixi.js"></script>
+	<!-- endbower -->
+	<!-- injector:js -->
+	<script src="./scripts/intro.js"></script>
+	<script src="./scripts/controller/game-loop-controller.js"></script>
+	<script src="./scripts/controller/scene-controller.js"></script>
+	<script src="./scripts/scene/main-menu-scene.js"></script>
+	<script src="./scripts/scene/game-scene.js"></script>
+	<script src="./scripts/outro.js"></script>
+	<!-- endinjector -->
+</head>
+
+<body>
+</body>
+
 </html>
