--- a/template.index.html
+++ b/template.index.html
@@ -1,18 +1,27 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Pixi Multi Spine</title>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<meta name="full-screen" content="yes"/>
-		<meta id="viewport" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-		<meta name="apple-mobile-web-app-capable" content="yes">
-		<!-- injector:css -->
-		<!-- endinjector -->
-		<!-- bower:js -->
-		<!-- endbower -->
-		<!-- injector:js -->
-		<!-- endinjector -->
-	</head>
-	<body>
-	</body>
+
+<head>
+	<title>Pixi Multi Spine</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="full-screen" content="yes" />
+	<meta id="viewport" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<!-- injector:css -->
+	<!-- endinjector -->
+
+
+	<!-- manually injected js -->
+	<script src="bower_components/p2js/build/p2.js"></script>
+	<!-- end manual inject -->
+
+	<!-- bower:js -->
+	<!-- endbower -->
+	<!-- injector:js -->
+	<!-- endinjector -->
+</head>
+
+<body>
+</body>
+
 </html>
