--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,7 @@
 	<!-- endbower -->
 	<!-- injector:js -->
 	<script src="./scripts/intro.js"></script>
+	<script src="./scripts/controller/player-controller.js"></script>
 	<script src="./scripts/controller/game-loop-controller.js"></script>
 	<script src="./scripts/controller/scene-controller.js"></script>
 	<script src="./scripts/scene/main-menu-scene.js"></script>
