--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,7 @@
 	<script src="./scripts/controller/scene-controller.js"></script>
 	<script src="./scripts/scene/main-menu-scene.js"></script>
 	<script src="./scripts/scene/game-scene.js"></script>
+	<script src="./scripts/scene/rpg-scene.js"></script>
 	<script src="./scripts/scene/end-game-scene.js"></script>
 	<script src="./scripts/outro.js"></script>
 	<!-- endinjector -->
