--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,7 @@
 	<script src="./scripts/scene/main-menu-scene.js"></script>
 	<script src="./scripts/scene/game-scene.js"></script>
 	<script src="./scripts/scene/rpg-scene.js"></script>
+	<script src="./scripts/scene/combat-scene.js"></script>
 	<script src="./scripts/scene/end-game-scene.js"></script>
 	<script src="./scripts/outro.js"></script>
 	<!-- endinjector -->
