--- a/app/index.html
+++ b/app/index.html
@@ -20,15 +20,19 @@
 	<script src="bower_components/modernizr/modernizr.js"></script>
 	<script src="bower_components/howler/howler.js"></script>
 	<script src="bower_components/pixi/bin/pixi.js"></script>
+	<script src="bower_components/tween.js/src/Tween.js"></script>
 	<!-- endbower -->
 	<!-- injector:js -->
 	<script src="./scripts/intro.js"></script>
+	<script src="./scripts/synth/notes.js"></script>
+	<script src="./scripts/synth/synth.js"></script>
 	<script src="./scripts/utils/colors.js"></script>
 	<script src="./scripts/utils/option-factory.js"></script>
 	<script src="./scripts/controller/player-controller.js"></script>
 	<script src="./scripts/controller/game-loop-controller.js"></script>
 	<script src="./scripts/controller/scene-controller.js"></script>
 	<script src="./scripts/scene/base-scene.js"></script>
+	<script src="./scripts/scene/animations-scene.js"></script>
 	<script src="./scripts/scene/main-menu-scene.js"></script>
 	<script src="./scripts/scene/game-scene.js"></script>
 	<script src="./scripts/scene/rpg-scene.js"></script>
