--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,7 @@
 	<script src="./scripts/controller/game-loop-controller.js"></script>
 	<script src="./scripts/controller/scene-controller.js"></script>
 	<script src="./scripts/scene/base-scene.js"></script>
+	<script src="./scripts/scene/hex-scene.js"></script>
 	<script src="./scripts/scene/animations-scene.js"></script>
 	<script src="./scripts/scene/main-menu-scene.js"></script>
 	<script src="./scripts/scene/game-scene.js"></script>
