--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,7 @@
 	<script src="./scripts/scene/animations-scene.js"></script>
 	<script src="./scripts/scene/main-menu-scene.js"></script>
 	<script src="./scripts/scene/game-scene.js"></script>
+	<script src="./scripts/scene/space-music-scene.js"></script>
 	<script src="./scripts/scene/rpg-scene.js"></script>
 	<script src="./scripts/scene/combat-scene.js"></script>
 	<script src="./scripts/scene/end-game-scene.js"></script>
